--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             odio morbi quis. Faucibus vitae aliquet nec ullamcorper sit amet risus nullam
             eget. Nam libero justo laoreet sit. Amet massa vitae tortor condimentum
             lacinia quis vel eros donec. Sit amet facilisis magna etiam. Imperdiet sed
-            euismod nisi porta.
+            euismod nisi porta lipsum.
           </p>
           <a href="#" class="btn btn--green">Book now</a>
         </div>
